# nvme-dem

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  addr.c  autoconf.sh  cli.c  common.h  configure.ac  curl.c  curl.h  daemon.c  dem.c  dem.spec  interfaces.c  json.c  json.h  latest.txt  logpages.c  mongoose.c  mongoose.h  mongoose.patch  nvme-dem.spec.in  ofi.c  parse.c  pseudo_target.c  restful.c  show.c  show.h  tags.h
.bin/: demt
bash_completion.d/: dem
files/: Licenses  gdb.in  mongoose.c  mongoose.h  spdk_install.sh  valgrind_suppress
files/json.schemas/: dem-dc_config-file_json-schema  dem-dc_http-only_commands  dem_cli_curl_trace.sh  demd-.config-schema.json
html/: encode.js  encode.js.original  forms.js  index.html  scripts.js  stylesheet.css
incl/: klist.h  list.h  nvme-rdma.h  nvme.h
src/: cli.c  common.h  curl.c  curl.h  daemon.c  domain.c  interfaces.c  json.c  json.h  logpages.c  nvmeof.c  ofi.c  pseudo_target.c  restful.c  show.c  show.h  tags.h
src/ac/: common.h  daemon.c
src/auto_connect/: common.h  daemon.c
src/cli/: cli.c  show.c  show.h
src/common/: curl.c  logpages.c  nvmeof.c  ofi.c  parse.c  rdma.c  tcp.c
src/dc/: common.h  config.c  daemon.c  interfaces.c  json.c  json.h  pseudo_target.c  restful.c
src/dem/: cli.c  common.h  config.c  curl.c  curl.h  daemon.c  interfaces.c  json.c  json.h  logpages.c  pseudo_target.c  restful.c  show.c  show.h
src/demd/: common.h  config.c  daemon.c  domain.c  interfaces.c  json.c  json.h  logpages.c  nvmeof.c  ops.h  parse.c  pseudo_target.c  rdma.c  restful.c
src/demt/: common.h  configfs.c  daemon.c  ofi.c  restful.c
src/discovery_ctrl/: common.h  config.c  daemon.c  interfaces.c  json.c  json.h  pseudo_target.c  restful.c
src/ec/: common.h  configfs.c  daemon.c  restful.c
src/endpoint/: common.h  configfs.c  daemon.c  etc_config.c  pseudo_target.c  restful.c  spdk_config.c
src/endpoint_config/: common.h  configfs.c  daemon.c  restful.c
src/gui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxyconfig.json
src/gui/.VSCodeCounter/2022-06-08_15-04-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/gui/e2e/src/: app.e2e-spec.ts
src/gui/src/: index.html  styles.css
src/gui/src/app/: app.component.spec.ts  app.component.ts  app.module.ts  auth.guard.ts  auth.service.ts  interface.ts  typings.ts  user.service.ts
src/gui/src/app/accordion/: accordion.component.css  accordion.component.html  accordion.component.ts
src/gui/src/app/admin/: admin.component.css  admin.component.html  admin.component.ts
src/gui/src/app/home/: home.component.html  home.component.ts
src/gui/src/app/landing-page/: landing-page.component.css  landing-page.component.html  landing-page.component.ts
src/gui/src/app/login/: login.component.css  login.component.html  login.component.ts
src/gui/src/app/logout/: logout.component.html  logout.component.ts
src/gui/src/app/navbar_intel/: navbar_intel.component.css  navbar_intel.component.html  navbar_intel.component.spec.ts  navbar_intel.component.ts
src/gui/src/app/reporting/: reporting.component.css  reporting.component.html  reporting.component.ts
src/gui/src/app/subsystem-details/: subsystem-details.component.css  subsystem-details.component.html  subsystem-details.component.spec.ts  subsystem-details.component.ts
src/gui/src/app/table/: table.component.css  table.component.html  table.component.ts
src/gui/src/app/target-subsystems/: target-subsystems.component.css  target-subsystems.component.html  target-subsystems.component.spec.ts  target-subsystems.component.ts
src/gui/src/assets/: intel.jfif
src/gui/test/api/: auth.php  database.php  isloggedin.php  logout.php
src/host_auto_connect/: common.h  daemon.c
src/incl/: curl.h  dem.h  nvme.h  ofi.h  ops.h  tags.h  tcp.h  utils.h
src/incl/linux/: kernel.h  list.h  nvme-rdma.h  nvme.h
src/monitor/: common.h  daemon.c
src/supervisory_ctrl/: common.h  configfs.c  daemon.c  pseudo_target.c  restful.c
test/: common.h  makefile  ops.h  rdma.c  test.c
usr/: nvmeof  nvmeof.conf  nvmeof.service
usr/bash_completion.d/: dem-cli
usr/man/: dem-ac.8  dem-cli.1  dem-dc.8  dem-dm.1  dem-ec.8  dem-em.8  dem-hac.8  dem-sc.8  dem.1  dem.8
